[package]
name = "border"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
serde = "^1"
serde_json = "^1"
serde_yaml = "^0.9.0"
josekit = "^0.8.0"
url = { version = "^2.3.0", features = [ "serde" ] }
anyhow = "^1.0.0"
trust-dns-server = "^0.21.0"
fancy-duration = "^0.3"
clap = { version = "^4.0", features = [ "derive" ] }
tokio = { version = "^1.28.0", features = [ "full" ] }
hyper = { version = "^0.14.0", features = [ "client", "tcp", "http1", "http2", "server" ] }
